<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">210982895741034</string>
    <string name="app_name">Hitchhiker</string>
    <string name="action_settings">Settings</string>
    <string name="authorize">Authorize</string>
    <string name="title_activity_route_list">RouteList</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_route">AddRoute</string>
    <string name="add_route">Add Route</string>
    <string name="driving_from">Driving from</string>
    <string name="driving_to">Driving to</string>
    <string name="price">Price</string>
    <string name="departure_time">Departure time</string>
    <string name="save">Save</string>
    <string name="title_activity_route_view">RouteView</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="seats">Seats: </string>
    <string name="price_tag">Price: </string>
    <string name="loading">Notiek datu atjaunināšana</string>
    <string name="join">Join</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="decline">Decline</string>
    <string name="title_activity_offline_view">OfflineView</string>

</resources>
