<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddRoute" >

    <TextView
        android:id="@+id/driving_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="28dp"
        android:text="@string/driving_from" />

    <EditText
        android:id="@+id/driving_from_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/driving_from"
        android:layout_alignBottom="@+id/driving_from"
        android:layout_marginLeft="52dp"
        android:layout_toRightOf="@+id/driving_from"
        android:ems="10" >

    </EditText>

    <TextView
        android:id="@+id/driving_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/driving_from"
        android:layout_alignRight="@+id/driving_from"
        android:layout_below="@+id/driving_from_field"
        android:layout_marginTop="39dp"
        android:text="@string/driving_to" />
    
    <EditText
        android:id="@+id/driving_to_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/driving_to"
        android:layout_alignBottom="@+id/driving_to"
        android:layout_alignLeft="@+id/driving_from_field"
        android:ems="10" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/driving_to"
        android:layout_below="@+id/driving_to"
        android:layout_marginTop="32dp"
        android:text="@string/price" />
    
    <EditText
        android:id="@+id/price_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/price"
        android:layout_alignBottom="@+id/price"
        android:layout_alignLeft="@+id/driving_to_field"
        android:ems="10" />

    <TextView
        android:id="@+id/departure_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/price"
        android:layout_below="@+id/price"
        android:layout_marginTop="30dp"
        android:text="@string/departure_time" />

    <EditText
        android:id="@+id/departure_time_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/departure_time"
        android:layout_alignBottom="@+id/departure_time"
        android:layout_alignLeft="@+id/price_field"
        android:ems="10" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/departure_time_field"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:layout_toRightOf="@+id/departure_time"
        android:text="@string/save" />

</RelativeLayout>
